# gsettings-ubuntu-touch-schemas

./: Makefile.am  README  autogen.sh  configure.ac
accountsservice/: 50-com.ubuntu.AccountsService.pkla  50-com.ubuntu.touch.AccountsService.pkla  Makefile.am  com.ubuntu.AccountsService.Input.xml  com.ubuntu.AccountsService.SecurityPrivacy.xml  com.ubuntu.AccountsService.Sound.xml  com.ubuntu.AccountsService.policy  com.ubuntu.touch.AccountsService.Phone.xml  com.ubuntu.touch.AccountsService.SecurityPrivacy.xml  com.ubuntu.touch.AccountsService.Sound.xml  com.ubuntu.touch.AccountsService.policy
cleanup/: Makefile.am  clean-schemas.py  touch-schemas-clean.click-hook.in  touch-schemas-clean.conf.in
debian/: accountsservice-ubuntu-schemas.install  changelog  control  gsettings-ubuntu-schemas.install  rules
po/: POTFILES.in  POTFILES.skip
schemas/: Makefile.am  com.ubuntu.desktop.gschema.xml.in.in  com.ubuntu.notifications.hub.gschema.xml.in.in  com.ubuntu.notifications.settings.gschema.xml.in.in  com.ubuntu.phone.gschema.xml.in.in  com.ubuntu.postal.notifications.gschema.xml.in.in  com.ubuntu.touch.network.gschema.xml.in.in  com.ubuntu.touch.notifications.gschema.xml.in.in  com.ubuntu.touch.phone.gschema.xml.in.in  com.ubuntu.touch.sound.gschema.xml.in.in  com.ubuntu.touch.system.gschema.xml.in.in  com.ubuntu.user-interface.gschema.xml.in.in
upstart/: Makefile.am  clean-schemas.py
